force-app/main/default/objects/CM_Tournament_Result__c/CM_Tournament_Result__c.object-meta.xml
<CustomObject>
    <label>Tournament Result</label>
    <nameField>
        <displayFormat>TR-{00000}</displayFormat>
        <label>Tournament Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tournament Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>