force-app/main/default/objects/CM_Tournament_Result__c/fields/CM_Deck_Description__c.field-meta.xml
<CustomField>
    <fullName>CM_Deck_Description__c</fullName>
    <inlineHelpText>Turbo Dark...</inlineHelpText>
    <label>Deck Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>