force-app/main/default/objects/CM_Tournament_Result__c/fields/CM_Deck_Type__c.field-meta.xml
<CustomField>
    <fullName>CM_Deck_Type__c</fullName>
    <label>Deck Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Colorless</fullName>
            </value>
            <value>
                <fullName>Dark</fullName>
            </value>
            <value>
                <fullName>Dragon</fullName>
            </value>
            <value>
                <fullName>Fairy</fullName>
            </value>
            <value>
                <fullName>Fighting</fullName>
            </value>
            <value>
                <fullName>Fire</fullName>
            </value>
            <value>
                <fullName>Grass</fullName>
            </value>
            <value>
                <fullName>Lightning</fullName>
            </value>
            <value>
                <fullName>Metal</fullName>
            </value>
            <value>
                <fullName>Psychic</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>