force-app/main/default/objects/CM_Tournament_Result__c/fields/CM_Deck_Used__c.field-meta.xml
<CustomField>
    <fullName>CM_Deck_Used__c</fullName>
    <description>If no description, show the picklist value</description>
    <formula>IF (  
OR ( ISBLANK(CM_Deck_Description__c), ISNULL(CM_Deck_Description__c) ) ,
TEXT( CM_Deck_Type__c ),
CM_Deck_Description__c
)</formula>
    <label>Deck Used</label>
    <type>Text</type>
</CustomField>