force-app/main/default/objects/CM_Tournament_Result__c/fields/CM_Player__c.field-meta.xml
<CustomField>
    <fullName>CM_Player__c</fullName>
    <label>Player</label>
    <referenceTo>CM_Players__c</referenceTo>
    <relationshipName>Tournament_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>