force-app/main/default/objects/CM_Tournament_Result__c/fields/CM_Points_Earned__c.field-meta.xml
<CustomField>
    <fullName>CM_Points_Earned__c</fullName>
    <label>Points Earned</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>