force-app/main/default/objects/CM_Tournament_Result__c/fields/CM_Record__c.field-meta.xml
<CustomField>
    <fullName>CM_Record__c</fullName>
    <inlineHelpText>&quot;0-0-0&quot;</inlineHelpText>
    <label>Record</label>
    <length>9</length>
    <type>Text</type>
</CustomField>