force-app/main/default/objects/CM_Tournament_Result__c/fields/CM_Tournament__c.field-meta.xml
<CustomField>
    <fullName>CM_Tournament__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tournament</label>
    <referenceTo>CM_Tournament__c</referenceTo>
    <relationshipLabel>CM Tournament Results</relationshipLabel>
    <relationshipName>CM_Tournament_Results</relationshipName>
    <type>Lookup</type>
</CustomField>