force-app/main/default/objects/CM_Tournament_Result__c/fields/CM_Tournament_Name__c.field-meta.xml
<CustomField>
    <fullName>CM_Tournament_Name__c</fullName>
    <formula>CM_Tournament__r.Name</formula>
    <label>Tournament Name</label>
    <type>Text</type>
</CustomField>