force-app/main/default/objects/CM_Tournament_Result__c/fields/CM_Tournament_Standing__c.field-meta.xml
<CustomField>
    <fullName>CM_Tournament_Standing__c</fullName>
    <label>Tournament Standing</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>