force-app/main/default/objects/CM_Tournament_Result__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CM_Tournament_Type__c</columns>
    <columns>CM_Date_of_Event__c</columns>
    <columns>CM_Player__c</columns>
    <columns>CM_Points_Earned__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>